test/spec_vectors/load64/fail/module_50.wat
(module (memory i64 0) (func $type-address-empty-in-return (return (i32.load)) (drop)))